Final verification implementation